--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="styles/images/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, totam consequatur? Aut impedit quae debitis dolore facere ut deleniti amet, alias vel id. Fugiat ullam, minima dignissimos praesentium reprehenderit nesciunt.</p>
+            <img class="lado" src="styles/images/curso-html-css.png" alt="Curso HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum dignissimos, eligendi tenetur vel rem voluptates inventore repudiandae possimus doloremque nobis! Quae omnis repudiandae earum nam quidem adipisci animi illo exercitationem!</p>
+            <img class="lado" src="styles/images/curso-javascript.png" alt="Curso de JS">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
